Refactored TestingDummyHelper to it and SourceTestClassWrapper
Where SourceTestClassWrapper is abstract, and do all ahrd work. The
TestingDummyHelper jsut sets pkg, classname and class body